<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/imgFotoAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descricao_img_autor"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtNomeAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgFotoAutor"
            android:layout_marginTop="5dp"
            android:text="@string/label_nome_autor"
            android:textSize="@dimen/lista_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtValNomeAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNomeAutor"
            android:text="@string/variavel"
            android:textSize="@dimen/lista_text_size" />

        <ImageView
            android:id="@+id/imgStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtValNomeAutor"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/descricao_img_star"
            android:src="@drawable/ic_star" />

        <TextView
            android:id="@+id/txtValStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgStar"
            android:layout_alignTop="@+id/imgStar"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/imgStar"
            android:layout_toRightOf="@+id/imgStar"
            android:gravity="center"
            android:text="@string/variavel"
            android:textSize="@dimen/lista_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgFork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgStar"
            android:layout_alignTop="@+id/imgStar"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/txtValStar"
            android:layout_toRightOf="@+id/txtValStar"
            android:contentDescription="@string/descricao_img_fork"
            android:src="@drawable/ic_fork" />

        <TextView
            android:id="@+id/txtValFork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgFork"
            android:layout_alignTop="@+id/imgFork"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/imgFork"
            android:layout_toRightOf="@+id/imgFork"
            android:gravity="center"
            android:text="@string/variavel"
            android:textSize="@dimen/lista_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNomeRepositorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgStar"
            android:layout_marginTop="5dp"
            android:text="@string/label_nome_repositorio"
            android:textSize="@dimen/lista_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtValNomeRepositorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNomeRepositorio"
            android:text="@string/variavel"
            android:textSize="@dimen/lista_text_size" />

        <TextView
            android:id="@+id/txtDescricaoRepositorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtValNomeRepositorio"
            android:layout_marginTop="5dp"
            android:text="@string/label_descricao_repositorio"
            android:textSize="@dimen/lista_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtValDescricaoRepositorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescricaoRepositorio"
            android:text="@string/variavel"
            android:textSize="@dimen/lista_text_size" />

    </RelativeLayout>

</android.support.v7.widget.CardView>